--- a/SQL/Analyzing CIA Factbook Data Using SQLite and Python.ipynb
+++ b/SQL/Analyzing CIA Factbook Data Using SQLite and Python.ipynb
@@ -7,6 +7,15 @@
     "## Introduction"
    ]
   },
+  
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this project, we'll work with data from the CIA World Factbook, a compendium of statistics about all of the countries on Earth. The Factbook contains demographic information like:\n- population - The population as of 2015.\n- population_growth - The annual population growth rate, as a percentage.\n- area - The total land and water area."
+   ]
+  },
+  
   {
    "cell_type": "code",
    "execution_count": 9,
